Added POST API for STAC Items
* Update openAPI spec to have new operationIds for routes for POST API
* Updated Stac router classes
* Updated ApiServerVerticle to allow POST method at /stac/collections/<collection-id>/items route
* Updated DatabaseServiceImpl to insert the data into postgres
